@@ -23,6 +23,7 @@
 package org.cougaar.core.blackboard;
 
 import org.cougaar.core.agent.*;
+import org.cougaar.core.service.BlackboardService;
 
 import java.util.Enumeration;
 import java.util.Collection;
@@ -31,6 +32,7 @@ import java.util.Iterator;
 import org.cougaar.core.blackboard.*;
 
 public class PersistenceSubscriber extends Subscriber
+  implements BlackboardService
 {
   public PersistenceSubscriber(BlackboardClient client, Distributor Distributor) {
     setClientDistributor(client, Distributor);
